--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,10 @@
 server {
-    listen 80;
+    listen 443 ssl;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_certificate /ssl.crt;
+    ssl_certificate_key /ssl.key;
+
     root /opt/graphite/webapp/content;
     index index.html;
 
@@ -7,7 +12,7 @@ server {
       # django admin static files
       alias /usr/local/lib/python2.7/dist-packages/django/contrib/admin/media/;
     }
-    
+
     location / {
       # checks for static file, if not found proxy to app
       try_files \$uri @app;
