Replicated only needs 15 minutes of samples at 1 sample every 2 seconds.

--- a/conf/storage-schemas.conf
+++ b/conf/storage-schemas.conf
@@ -23,15 +23,15 @@ retentions = 60:90d
 
 [statsd]
 pattern = ^stats.*
-retentions = 10s:1d,1m:14d,10m:1y
+retentions = 2s:20m
 
 [statsd_counters]
 pattern = ^stats_counts.*
-retentions = 10s:1d,1m:14d,10m:1y
+retentions = 10s:1d,1m:14d
 
 [collectd]
 pattern = ^collectd.*
-retentions = 10s:1d,1m:14d,10m:1y
+retentions = 10s:1d,1m:14d
 
 [default_1min_for_1day]
 pattern = .*
