--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,30 +1,28 @@
-server {
-    listen 443 ssl;
+worker_processes 1;
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_certificate /ssl.crt;
-    ssl_certificate_key /ssl.key;
+events {
+	worker_connections 768;
+}
 
-    root /opt/graphite/webapp/content;
-    index index.html;
+http {
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay on;
+	keepalive_timeout 65;
+	types_hash_max_size 2048;
 
-    location /media {
-      # django admin static files
-      alias /usr/local/lib/python2.7/dist-packages/django/contrib/admin/media/;
-    }
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
 
-    location / {
-      # checks for static file, if not found proxy to app
-      try_files \$uri @app;
-    }
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
+	ssl_prefer_server_ciphers on;
 
-    location @app {
-        include fastcgi_params;
-        fastcgi_split_path_info ^()(.*)$;
-        fastcgi_pass 127.0.0.1:8080;
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-    }
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
+
+	gzip on;
+	gzip_disable "msie6";
+
+	include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/sites-enabled/*;
 }
