--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:statsd]
-command=nodejs /opt/statsd/stats.js /opt/statsd/config.js
+command=node /opt/statsd/stats.js /opt/statsd/config.js
 
 [program:carbon-cache]
 command=/opt/graphite/bin/carbon-cache.py start --logdir=/var/log/carbon
@@ -15,6 +15,6 @@ startsecs	= 0
 autorestart	= false
 
 [program:nginx]
-command=service nginx start
+command=/usr/sbin/nginx -c /etc/nginx/nginx.conf
 startsecs	= 0
 autorestart	= false
